@@ -16,6 +16,8 @@ Changes in @NEW@:
       --interactive" without displaying usage information. (CNY-985)
     * The usage message displayed when running "conary" or "cvc" has
       been simplified and improved. (CNY-560)
+    * Conary now only warns about being able to execute gpg if a
+      signature trust threshold has been set. (CNY-589)
 
   o Build Changes:
     * cvc now allows files to be switched from autosource to normal
